--- a/css/style.css
+++ b/css/style.css
@@ -42,78 +42,56 @@ CONTAINERS STYLE
 	padding-top: 3px;
 }
 
-.home 
+.navleft 
 {
 	margin:auto;
-	width:13%;
-	background-color: #D0D0D0;
-	border:none;
-	float:left;
-	padding-top: 3px;
-	padding-bottom: 5px;
-	padding-left: 3px;
-}
-
-.about 
-{
-	margin:auto;
-	width:13%;
-	background-color: #D0D0D0;
-	border:none;
-	float:left;
-	padding-top: 3px;
-	padding-bottom: 5px;
-	padding-left: 3px;
-}
-
-.schedule
-{
-	margin:auto;
-	width:19%;
-	background-color: #D0D0D0;
+	width:50%;
+	background-color: #808080;
 	border: none;
 	float:left;
-	padding-top: 3px;
-	padding-bottom: 5px;
-	padding-left: 3px;
+	padding-top: 2px;
+	padding-bottom: 2px;
+	padding-left: 2px;
 }
 
-.sessions
+.navright
 {
 	margin:auto;
-	width:18%;
-	background-color: #D0D0D0;
-	border:none;
-	float: left;
-	padding-top: 3px;
-	padding-bottom: 5px;
-	padding-left: 3px;
-}
-
-.speakers
-{
-	margin:auto;
-	width:18%;
-	background-color: #D0D0D0;
-	border:none;
-	float: left;
-	padding-top: 3px;
-	padding-bottom: 5px;
-	padding-left: 3px;
-}
-
-.videos
-{
-	margin: auto;
-	width: 13%;
-	background-color: #D0D0D0;
+	width:50%;
+	background-color: #808080;
 	border: none;
-	float: left;
-	padding-top: 3px;
-	padding-bottom: 5px;
-	padding-left: 3px;
-	padding-right: 3px;
+	float:right;
+	padding-top: 2px;
+	padding-bottom: 2px;
+	padding-left: 1px;
 }
+
+.menu
+{
+	margin:auto;
+	width:45%;
+	background-color: #808080;
+	border: none;
+	float: right;
+	padding-top: 2px;
+	padding-bottom: 2px;
+	padding-left: 1px;
+	padding-right: 20px;
+}
+
+.top
+{
+	margin:auto;
+	width:98%;
+	background-color: #808080;
+	border: none;
+	float: right;
+	padding-top: 2px;
+	padding-bottom: 2px;
+	padding-left: 0px;
+	clear: both;
+}
+
 
 .content
 {
@@ -146,11 +124,49 @@ TEXT STYLE
 a.nav	/*all - the navigation*/
 
 	{	
-		font-family: Tahoma, Trebuchet MS, Myriad Pro, Arial, Verdana;
-		font-size:12px;
+		font-family: Century Gothic, Helvetica Neue, Tahoma, Trebuchet MS, Arial, Verdana;
+		font-size:20px;
 		font-weight: normal;
-		color: #990033;
-		text-align:center;
+		color: white;
+		text-align: left;
+		padding-left: 0px;
+		text-decoration:none;
+		list-style-type: none;
+	}
+
+ul	/*all*/
+	{	
+		font-family: Century Gothic, Helvetica Neue, Tahoma, Trebuchet MS, Myriad Pro, Arial, Verdana;
+		font-size:13px;
+		font-weight: normal;
+		color: white;
+		text-align:left;
+		padding-left: 20px;
+		text-decoration:none;
+		list-style-type: none;
+	}
+
+
+a.menu	/*all - the navigation*/
+
+	{	
+		font-family: Century Gothic, Helvetica Neue, Tahoma, Trebuchet MS, Arial, Verdana;
+		font-size:24px;
+		font-weight: normal;
+		color: white;
+		text-align: right;
+		text-indent:0px;
+		text-decoration:none;
+	}
+
+a.top	/*all - the navigation*/
+
+	{	
+		font-family: Century Gothic, Tahoma, Trebuchet MS, Myriad Pro, Arial, Verdana;
+		font-size:14px;
+		font-weight: normal;
+		color: white;
+		text-align: center;
 		text-indent:0px;
 		text-decoration:none;
 	}
@@ -158,10 +174,10 @@ a.nav	/*all - the navigation*/
 p.add1	/*all*/
 
 	{	
-		font-family: Tahoma, Trebuchet MS, Myriad Pro, Arial, Verdana;
+		font-family: Helvetica Neue, Tahoma, Trebuchet MS, Myriad Pro, Arial, Verdana;
 		font-size:11px;
 		font-weight: normal;
-		color: #F8F8F8;
+		color: #303030 ;
 		text-align:center;
 		text-indent:0px;
 		text-decoration:none;
@@ -172,15 +188,17 @@ p.add1	/*all*/
 
 p.add2	/*all*/
 	{	
-		font-family: Tahoma, Trebuchet MS, Myriad Pro, Arial, Verdana;
+		font-family: Helvetica Neue, Tahoma, Trebuchet MS, Myriad Pro, Arial, Verdana;
 		font-size:11px;
 		font-weight: normal;
-		color: #F8F8F8;
+		color: #303030 ;
 		text-align:center;
 		text-indent:0px;
 		text-decoration:none;
 		margin-top: 0px;
 	}
+
+
 
 
 								/*
@@ -259,8 +277,8 @@ p.address	/*home*/
 
 p.hom	/*home*/
 	{	
-		font-family: Tahoma, Trebuchet MS, Myriad Pro, Arial, Verdana;
-		font-size:11px;
+		font-family: Helvetica Neue, Trebuchet MS, Myriad Pro, Arial, Verdana;
+		font-size:12px;
 		font-weight: normal;
 		color:black;
 		text-align:justify;
@@ -300,11 +318,11 @@ CONTAINERS STYLE
 .date
 {
 	margin: auto;
-	width: 48%;
+	width: 100%;
 	background-color: #F0F0F0;
 	border: none;
 	padding-left: 2px;
-	padding-right: 2px;
+	padding-right: 7px;
 	padding-top: 2px;
 	padding-bottom: 2px;
 	float:left;
@@ -313,10 +331,10 @@ CONTAINERS STYLE
 .location
 {
 	margin: auto;
-	width: 48%;
+	width: 100%;
 	background-color: #F0F0F0;
 	border: none;
-	padding-left: 2px;
+	padding-left: 7px;
 	padding-right: 2px;
 	padding-top: 2px;
 	padding-bottom: 2px;
@@ -410,8 +428,8 @@ TEXT STYLE
 h1.abo	/*about*/
 
 	{	
-		font-family: Tahoma, Trebuchet MS, Myriad Pro, Arial, Verdana;
-		font-size:14px;
+		font-family: Century Gothic, Trebuchet MS, Myriad Pro, Arial, Verdana;
+		font-size:18px;
 		font-weight: bold;
 		color: purple;
 		text-align:justify;
@@ -445,7 +463,7 @@ h3.abo	/*about*/
 
 p.abo	/*about*/
 	{	
-		font-family: Tahoma, Trebuchet MS, Myriad Pro, Arial, Verdana;
+		font-family: Helvetica Neue, Trebuchet MS, Myriad Pro, Arial, Verdana;
 		font-size:13px;
 		font-weight: normal;
 		color:black;
@@ -454,8 +472,93 @@ p.abo	/*about*/
 		text-decoration:none;
 		clear:both;
 	}
+
+
+p.abodate	/*about*/
+	{	
+		font-family: Tahoma, Trebuchet MS, Myriad Pro, Arial, Verdana;
+		font-size:13px;
+		font-weight: normal;
+		color:black;
+		text-align:center;
+		text-indent:10px;
+		text-decoration:none;
+		clear:both;
+	}
+
+p.aboloc	/*about*/
+	{	
+		font-family: Tahoma, Trebuchet MS, Myriad Pro, Arial, Verdana;
+		font-size:13px;
+		font-weight: normal;
+		color:black;
+		text-align:center;
+		text-indent:10px;
+		text-decoration:none;
+		clear:both;
+	}
 	
-	
+
+/*
+								= = = = = = = = = = = = = =
+								SCHEDULE PAGE STYLE
+								= = = = = = = = = = = = = =
+								*/
+
+
+/* 
+----------
+CONTAINERS STYLE
+----------
+*/
+
+
+
+
+/* 
+----
+TEXT STYLE
+----
+*/
+
+h1.sch
+
+	{	
+		font-family: Century Gothic, Trebuchet MS, Myriad Pro, Arial, Verdana;
+		font-size:18px;
+		font-weight: bold;
+		color: purple;
+		text-align:justify;
+		text-indent:12px;
+		text-decoration:none;
+	}
+
+h2.sch
+
+	{	
+		font-family: Century Gothic, Trebuchet MS, Myriad Pro, Arial, Verdana;
+		font-size:16px;
+		font-weight: normal;
+		color: #990033;
+		text-align:justify;
+		text-indent:15px;
+		text-decoration:none;
+	}
+
+p.sch
+		
+	{	
+		font-family: Helvetica Neue, Trebuchet MS, Myriad Pro, Arial, Verdana;
+		font-size:13px;
+		font-weight: normal;
+		color:black;
+		text-align:justify;
+		padding-left: 20px;
+		text-indent:0px;
+		text-decoration:none;
+		clear:both;
+	}		
+
 								/*
 								= = = = = = = = = = = = = =
 								SESSIONS PAGE STYLE
@@ -641,5 +744,50 @@ p.pres	/*sessions*/
 		clear:both;
 	}
 
+								/*
+								= = = = = = = = = = = = = =
+								SESSIONS PAGE STYLE
+								= = = = = = = = = = = = = =
+								*/
 
 
+/* 
+----------
+CONTAINERS STYLE
+----------
+*/
+
+
+
+
+/* 
+----------
+TEXT STYLE
+----------
+*/
+
+h1.vid
+
+	{	
+		font-family: Century Gothic, Trebuchet MS, Myriad Pro, Arial, Verdana;
+		font-size:18px;
+		font-weight: bold;
+		color: purple;
+		text-align:justify;
+		text-indent:12px;
+		text-decoration:none;
+	}
+
+p.vid
+
+	{	
+		font-family: Helvetica Neue, Trebuchet MS, Myriad Pro, Arial, Verdana;
+		font-size:13px;
+		font-weight: normal;
+		color:black;
+		text-align:justify;
+		padding-left: 20px;
+		text-indent:0px;
+		text-decoration:none;
+		clear:both;
+	}	
