--- a/css/style.css
+++ b/css/style.css
@@ -48,8 +48,8 @@ CONTAINERS STYLE
 	width:49%;
 	background-color: #808080;
 	border: none;
-	float:left;
-	padding-top: 2px;
+	float: left;
+	padding-top: 20px;
 	padding-bottom: 2px;
 	padding-left: 2px;
 }
@@ -60,8 +60,8 @@ CONTAINERS STYLE
 	width:49%;
 	background-color: #808080;
 	border: none;
-	float:right;
-	padding-top: 2px;
+	float: right;
+	padding-top: 20px;
 	padding-bottom: 2px;
 	padding-left: 1px;
 }
@@ -130,17 +130,28 @@ TEXT STYLE
 ----
 */
 
+h1.title
+	{	
+		font-family: Century Gothic, Helvetica Neue, Tahoma, Trebuchet MS, Arial, Verdana;
+		font-size:20px;
+		font-weight: normal;
+		color: #808080;
+		text-align: left;
+		text-indent: 0px;
+		text-decoration:none;
+	}
 a.nav	/*all - the navigation*/
 
 	{	
 		font-family: Century Gothic, Helvetica Neue, Tahoma, Trebuchet MS, Arial, Verdana;
-		font-size:20px;
+		font-size:22px;
 		font-weight: normal;
 		color: white;
 		text-align: left;
 		padding-left: 0px;
 		text-decoration:none;
 		list-style-type: none;
+		margin-left: 25px;
 	}
 
 ul	/*all*/
@@ -152,7 +163,7 @@ ul	/*all*/
 		text-align:left;
 		padding-left: 20px;
 		text-decoration:none;
-		list-style-type: none;
+		line-height: 20px;
 	}
 
 
@@ -172,12 +183,13 @@ a.top	/*all - the navigation*/
 
 	{	
 		font-family: Century Gothic, Tahoma, Trebuchet MS, Myriad Pro, Arial, Verdana;
-		font-size:14px;
+		font-size:16px;
 		font-weight: normal;
 		color: white;
 		text-align: center;
 		text-indent:0px;
 		text-decoration:none;
+		margin: 15px;
 	}
 
 p.add1	/*all*/
@@ -185,14 +197,14 @@ p.add1	/*all*/
 	{	
 		font-family: Helvetica Neue, Tahoma, Trebuchet MS, Myriad Pro, Arial, Verdana;
 		font-size:11px;
-		font-weight: normal;
+		font-weight: bold;
 		color: #303030 ;
 		text-align:center;
 		text-indent:0px;
 		text-decoration:none;
-		margin-bottom: 0px;
-		margin-top: 0px;
-		padding-top: 10px;
+		margin-top: 20px;
+		padding-top: 30px;
+		line-height: 15px;
 	}
 
 p.add2	/*all*/
@@ -205,6 +217,7 @@ p.add2	/*all*/
 		text-indent:0px;
 		text-decoration:none;
 		margin-top: 0px;
+		line-height: 15px;
 	}
 
 
@@ -297,9 +310,10 @@ p.hom	/*home*/
 	}
 
 
+
 /*
 								= = = = = = = = = = = = = =
-								ABOUT PAGE STYLE
+								SPEAKERS PAGE STYLE
 								= = = = = = = = = = = = = =
 								*/
 
@@ -311,122 +325,13 @@ CONTAINERS STYLE
 */
 
 
-.conference
-{
-	margin: auto;
-	width: 99%;
-	background-color: #F0F0F0;
-	border: none;
-	clear: both;
-	padding-left: 2px;
-	padding-right: 2px;
-	padding-top: 2px;
-	padding-bottom: 2px;
-}
 
-.date
-{
-	margin: auto;
-	width: 100%;
-	background-color: #F0F0F0;
-	border: none;
-	padding-left: 2px;
-	padding-right: 7px;
-	padding-top: 2px;
-	padding-bottom: 2px;
-	float:left;
-}
 
-.location
-{
-	margin: auto;
-	width: 100%;
-	background-color: #F0F0F0;
-	border: none;
-	padding-left: 7px;
-	padding-right: 2px;
-	padding-top: 2px;
-	padding-bottom: 2px;
-	float:right;
-}
+			/*Nothing yet here. */
 
-.map
-{
-	margin: auto;
-	width: 99%;
-	background-color: #F0F0F0;
-	border: none;
-	clear: both;
-	padding-left: 2px;
-	padding-right: 2px;
-	padding-top: 2px;
-	padding-bottom: 2px;
-}
 
-.directions
-{
-	margin: auto;
-	width: 99%;
-	background-color: #F0F0F0;
-	border: none;
-	clear: both;
-	padding-left: 2px;
-	padding-right: 2px;
-	padding-top: 2px;
-	padding-bottom: 2px;
-}
 
-.subway
-{
-	margin: auto;
-	width: 99%;
-	background-color: #F0F0F0;
-	border: none;
-	clear: both;
-	padding-left: 2px;
-	padding-right: 2px;
-	padding-top: 2px;
-	padding-bottom: 2px;
-}
 
-.bus
-{
-	margin: auto;
-	width: 99%;
-	background-color: #F0F0F0;
-	border: none;
-	clear: both;
-	padding-left: 2px;
-	padding-right: 2px;
-	padding-top: 2px;
-	padding-bottom: 2px;
-}
-
-.path
-{
-	margin: auto;
-	width: 99%;
-	background-color: #F0F0F0;
-	border: none;
-	clear: both;
-	padding-left: 2px;
-	padding-right: 2px;
-	padding-top: 2px;
-	padding-bottom: 2px;
-}
-
-.car
-{
-	margin: auto;
-	width: 99%;
-	background-color: #F0F0F0;
-	border: none;
-	clear: both;
-	padding-left: 2px;
-	padding-right: 2px;
-	padding-top: 2px;
-	padding-bottom: 2px;
-}
 
 /* 
 ----
@@ -434,46 +339,23 @@ TEXT STYLE
 ----
 */
 
-h1.abo	/*about*/
+h1.spe	/*home*/
 
 	{	
-		font-family: Century Gothic, Trebuchet MS, Myriad Pro, Arial, Verdana;
-		font-size:18px;
+		font-family: Tahoma, Trebuchet MS, Myriad Pro, Arial, Verdana;
+		font-size:14px;
 		font-weight: bold;
-		color: purple;
-		text-align:justify;
+		color: #CC0052;
+		text-align:left;
 		text-indent:12px;
 		text-decoration:none;
 	}
 
-h2.abo	/*about*/
 
-	{	
-		font-family: Tahoma, Trebuchet MS, Myriad Pro, Arial, Verdana;
-		font-size:12px;
-		font-weight: normal;
-		color: #990033;
-		text-align:justify;
-		text-indent:15px;
-		text-decoration:none;
-	}
-	
-h3.abo	/*about*/
-
-	{	
-		font-family: Tahoma, Trebuchet MS, Myriad Pro, Arial, Verdana;
-		font-size:12px;
-		font-weight: bold;
-		color: black;
-		text-align:justify;
-		text-indent:15px;
-		text-decoration:none;
-	}
-
-p.abo	/*about*/
+p.spe	/*home*/
 	{	
 		font-family: Helvetica Neue, Trebuchet MS, Myriad Pro, Arial, Verdana;
-		font-size:13px;
+		font-size:12px;
 		font-weight: normal;
 		color:black;
 		text-align:justify;
@@ -482,31 +364,6 @@ p.abo	/*about*/
 		clear:both;
 	}
 
-
-p.abodate	/*about*/
-	{	
-		font-family: Tahoma, Trebuchet MS, Myriad Pro, Arial, Verdana;
-		font-size:13px;
-		font-weight: normal;
-		color:black;
-		text-align:center;
-		text-indent:10px;
-		text-decoration:none;
-		clear:both;
-	}
-
-p.aboloc	/*about*/
-	{	
-		font-family: Tahoma, Trebuchet MS, Myriad Pro, Arial, Verdana;
-		font-size:13px;
-		font-weight: normal;
-		color:black;
-		text-align:center;
-		text-indent:10px;
-		text-decoration:none;
-		clear:both;
-	}
-	
 
 /*
 								= = = = = = = = = = = = = =
@@ -568,190 +425,7 @@ p.sch
 		clear:both;
 	}		
 
-								/*
-								= = = = = = = = = = = = = =
-								SESSIONS PAGE STYLE
-								= = = = = = = = = = = = = =
-								*/
-
-
-/* 
-----------
-CONTAINERS STYLE
-----------
-*/
-
-
-.cw
-{
-	margin: auto;
-	width: 99%;
-	background-color: #F0F0F0;
-	border: none;
-	clear: both;
-	padding-left: 2px;
-	padding-right: 2px;
-	padding-top: 2px;
-	padding-bottom: 2px;
-}
-
-.cws
-{
-	margin: auto;
-	width: 99%;
-	background-color: #F0F0F0;
-	border: none;
-	clear: both;
-	padding-left: 2px;
-	padding-right: 2px;
-	padding-top: 2px;
-	padding-bottom: 2px;
-}
-
-.fa
-{
-	margin: auto;
-	width: 99%;
-	background-color: #F0F0F0;
-	border: none;
-	clear: both;
-	padding-left: 2px;
-	padding-right: 2px;
-	padding-top: 2px;
-	padding-bottom: 2px;
-}
-
-.fas
-{
-	margin: auto;
-	width: 99%;
-	background-color: #F0F0F0;
-	border: none;
-	clear: both;
-	padding-left: 2px;
-	padding-right: 2px;
-	padding-top: 2px;
-	padding-bottom: 2px;
-}
-
-.pa
-{
-	margin: auto;
-	width: 99%;
-	background-color: #F0F0F0;
-	border: none;
-	clear: both;
-	padding-left: 2px;
-	padding-right: 2px;
-	padding-top: 2px;
-	padding-bottom: 2px;
-}
-
-.pas
-{
-	margin: auto;
-	width: 99%;
-	background-color: #F0F0F0;
-	border: none;
-	clear: both;
-	padding-left: 2px;
-	padding-right: 2px;
-	padding-top: 2px;
-	padding-bottom: 2px;
-}
-
-.ma
-{
-	margin: auto;
-	width: 99%;
-	background-color: #F0F0F0;
-	border: none;
-	clear: both;
-	padding-left: 2px;
-	padding-right: 2px;
-	padding-top: 2px;
-	padding-bottom: 2px;
-}
-
-.mas
-{
-	margin: auto;
-	width: 99%;
-	background-color: #F0F0F0;
-	border: none;
-	clear: both;
-	padding-left: 2px;
-	padding-right: 2px;
-	padding-top: 2px;
-	padding-bottom: 2px;
-}
-
-/* 
-----
-TEXT STYLE
-----
-*/
-
-
-h1.ses	/*sessions*/
-
-	{	
-		font-family: Tahoma, Trebuchet MS, Myriad Pro, Arial, Verdana;
-		font-size:14px;
-		font-weight: bold;
-		color: purple;
-		text-align:justify;
-		text-indent:12px;
-		text-decoration:none;
-	}
-
-h2.ses	/*sessions*/
-
-	{	
-		font-family: Tahoma, Trebuchet MS, Myriad Pro, Arial, Verdana;
-		font-size:12px;
-		font-weight: normal;
-		color: #990033;
-		text-align:justify;
-		text-indent:15px;
-		text-decoration:none;
-	}
-	
-h3.ses	/*sessions*/
-
-	{	
-		font-family: Tahoma, Trebuchet MS, Myriad Pro, Arial, Verdana;
-		font-size:12px;
-		font-weight: normal;
-		color: #990033;
-		text-align:justify;
-		text-indent:15px;
-		text-decoration:none;
-	}
-
-p.ses	/*sessions*/
-	{	
-		font-family: Tahoma, Trebuchet MS, Myriad Pro, Arial, Verdana;
-		font-size:13px;
-		font-weight: normal;
-		color:black;
-		text-align:justify;
-		text-indent:10px;
-		text-decoration:none;
-		clear:both;
-	}
-	
-p.pres	/*sessions*/
-	{	
-		font-family: Tahoma, Trebuchet MS, Myriad Pro, Arial, Verdana;
-		font-size:13px;
-		font-weight: normal;
-		color:black;
-		text-align:justify;
-		text-indent:10px;
-		text-decoration:none;
-		clear:both;
-	}
+								
 
 								/*
 								= = = = = = = = = = = = = =
